--- a/store/templates/about.html
+++ b/store/templates/about.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %} {% block content %}
 
-<h1>Welcome to the Stock-Trader store! Lets get Glitchy.</h1>
+<h1>About me</h1>
 
 {% endblock %}
